# agentrec

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  alembic.ini  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: init-db.sh
docker/grafana/dashboards/: agentrec.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/prometheus/: prometheus.yml
scripts/: evaluate_model.py  seed_db.py  train_model.py
src/: __init__.py  config.py  main.py  monitoring.py
src/agents/: CLAUDE.md  __init__.py  base.py  content_analyzer.py  orchestrator.py  recsys_engine.py  user_profiler.py
src/api/: CLAUDE.md  __init__.py  dependencies.py  middleware.py  routes.py
src/models/: CLAUDE.md  __init__.py  embeddings.py  ncf.py  schemas.py
tests/: CLAUDE.md  conftest.py  test_agents_comprehensive.py  test_models_comprehensive.py
tests/test_agents/: test_base.py  test_content_analyzer.py  test_orchestrator.py  test_recsys_engine.py  test_user_profiler.py
tests/test_api/: test_routes.py
tests/test_data/: test_agents_with_data.py  test_loader.py  test_schemas.py
tests/test_models/: test_embeddings.py  test_ncf.py  test_schemas.py
